# chainorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: .gitignore  bench_circulation_invariants.py
chainorder/: __init__.py  decompose.py  order_params.py
docs/: concepts.md  tutorial.ipynb
tests/: _fixtures.py  test_decompose.py  test_order_params.py
