[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chainorder"
version = "0.1.0"
description = "Chain decomposition and order parameters for ReO3-type anion ordering"
requires-python = ">=3.11"
dependencies = ["numpy", "ase"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
include = ["chainorder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["chainorder"]
strict = true
# NumPy's type stubs declare many operations (notably FFT returns) as
# `Any`, which triggers no-any-return spuriously. Keep the rest of
# `strict` active and disable this one check across the project.
warn_return_any = false
