[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "chainorder"
version = "0.1.0"
description = "Chain decomposition and order parameters for ReO3-type anion ordering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk" }]
keywords = [
    "materials-science",
    "crystallography",
    "order-parameters",
    "solid-solution",
    "ase",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["numpy", "ase"]

[project.urls]
Homepage = "https://github.com/bjmorgan/chainorder"
Repository = "https://github.com/bjmorgan/chainorder"
Issues = "https://github.com/bjmorgan/chainorder/issues"

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
include = ["chainorder*"]

[tool.setuptools.package-data]
chainorder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
packages = ["chainorder"]
strict = true
# NumPy's type stubs declare many operations (notably FFT returns) as
# `Any`, which triggers no-any-return spuriously. Keep the rest of
# `strict` active and disable this one check across the project.
warn_return_any = false
